--- a/Practica1/css/styles.css
+++ b/Practica1/css/styles.css
@@ -55,12 +55,14 @@
 		border-bottom-style: solid;
 		border-bottom-width: 2px;
 		border-bottom-color: #F2F2F2;
+		cursor: pointer;
 	}
 
 	/* Content itself */
 	.content{
 		width: 85%;
 		min-height: 100%;
+		margin: 12px;
 	}
 
 /* Footer */
@@ -100,3 +102,120 @@ footer{
 		padding-left: 8px;
 		float: left;
 	}
+
+
+/* General style */
+h3{
+	color: rgb(64, 89, 173);
+	font-size: 28px;
+	font-weight: 400;
+	padding-bottom: 12px;
+}
+
+/* Main Screen */
+#search_div{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding-bottom: 20px;
+}
+
+	#search_input, .dropbtn{
+		height: 32px;
+		font-size: 16px;
+		border: none;
+		border-radius: 6px;
+		background-color: #C4C4C4;
+		padding: 2px;
+		color: white;
+	}
+
+	/* Search text box */
+	#search_field{
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+		#search_input{
+			padding-left: 10px;
+			margin-right: 4px;
+		}
+
+		#search_input::placeholder {
+			color: white;
+			opacity: 1; /* Firefox */
+		}
+
+		#search_button{
+			height: 32px;
+			width: auto;
+		}
+
+	/* Categories dropdown menu */
+	.dropbtn {
+		cursor: pointer;
+		padding-right: 12px;
+		padding-left: 12px;
+	}
+
+	.dropdown {
+		position: relative;
+		display: inline-block;
+		float: right;
+	}
+
+	.dropdown-content {
+		display: none;
+		position: absolute;
+		right: 0;
+		background-color: #f9f9f9;
+		min-width: 160px;
+		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+		z-index: 1;
+	}
+
+	.dropdown-content a {
+		color: black;
+		padding: 12px 16px;
+		text-decoration: none;
+		display: block;
+	}
+
+	.dropdown-content a:hover {background-color: #F1F1F1;}
+	.dropdown:hover .dropdown-content {display: block;}
+	.dropdown:hover .dropbtn {background-color: #ABABAB;}
+
+.film_list{
+	float: left;
+	list-style-type: none;
+ 	overflow: auto;
+ 	height: 180px;
+ 	width: 100%
+}
+
+	.film_item{
+		float: left;
+		padding-right: 20px;
+		position: relative;
+		overflow: auto;
+	}
+
+		.film_item_img{
+			width: 160px;
+			height: 160px;
+			object-fit: cover;
+		}
+
+		.film_item_text{
+			width: 90%;
+			position: absolute;
+			right: 50%;
+			bottom: 10px;
+			transform: translateX(40%);
+			text-align: center;
+			color: white;
+		}
+
+
+
