--- a/Practica1/css/styles.css
+++ b/Practica1/css/styles.css
@@ -62,7 +62,7 @@
 	.content{
 		width: 85%;
 		min-height: 100%;
-		margin: 12px;
+		padding: 12px;
 	}
 
 /* Footer */
@@ -204,7 +204,7 @@ h3{
 
 	.film_item{
 		float: left;
-		padding-right: 20px;
+		margin-right: 20px;
 		position: relative;
 		overflow: auto;
 	}
@@ -213,6 +213,14 @@ h3{
 			width: 160px;
 			height: 160px;
 			object-fit: cover;
+			cursor: pointer;
+	 		transition: all 400ms cubic-bezier(0.165, 0.840, 0.440, 1.000);
+		}
+
+		.film_item_img:hover{
+			width: 165px;
+			height: 165px;
+			opacity: 1;
 		}
 
 		.film_item_text{
@@ -220,7 +228,7 @@ h3{
 			position: absolute;
 			right: 50%;
 			bottom: 10px;
-			transform: translateX(40%);
+			transform: translateX(50%);
 			text-align: center;
 			color: white;
 		}
