--- a/Practica1/css/styles.css
+++ b/Practica1/css/styles.css
@@ -1,5 +1,5 @@
 *{
-	font-family: Roboto;
+	font-family: 'Roboto', serif;
 	margin: 0px;
 	padding: 0px;
 }
@@ -14,7 +14,7 @@
 
 	/* CDdede */
 	#title {
-		font-family: "Crete Round";
+		font-family: 'Crete Round', serif;
 		font-size: 96px;
 		font-weight: 400;
 		color: rgb(244, 185, 66);
@@ -23,9 +23,8 @@
 
 	/* Login and register button */
 	.header_button{
-		font-family: Roboto;
 		font-size: 24px;
-		font-weight: 700;
+		font-weight: 500;
 		letter-spacing: 0px;
 		color: rgb(151, 216, 196);
 		padding: 20px;
