--- a/Practica1/css/styles.css
+++ b/Practica1/css/styles.css
@@ -42,6 +42,7 @@ body, html{
 		color: rgb(151, 216, 196);
 		padding: 20px;
 		float: right;
+		cursor: pointer;
 	}
 
 /* Body */
@@ -75,6 +76,7 @@ body, html{
 		width: 85%;
 		min-height: 100%;
 		padding: 12px;
+		background: #F2F2F2;
 		margin-bottom: 68px;
 	}
 
@@ -253,7 +255,6 @@ h3{
 	justify-content: space-between;
 	align-items: space-between;
 	flex-direction: column;
-	background: rgb(242, 242, 242);
 }
 
 	.mainContainer, .verContainer, .horContainer, .TextTextbox{
@@ -320,7 +321,49 @@ h3{
 
 
 
+/* Search results screen */
+.result_list{
+	float: left;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	list-style-type: none;
+ 	overflow: auto;
+ 	width: 100%
+}
 
+	.result_item{
+		width: 100%;
+		display: flex;
+		justify-content: flex-start;
+		margin: 12px;
+		margin-bottom: 14px;
+		background-color: white;
+		box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.05), 0 2px 2px 0 rgba(0, 0, 0, 0.05);
+		transition: all 400ms cubic-bezier(0.165, 0.840, 0.440, 1.000);
+	}
 
+	.result_item:hover{
+		box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.19), 0 4px 5px 0 rgba(0, 0, 0, 0.24);
+	}
 
+		.result_item_img{
+			width: 120px;
+			height: 120px;
+			object-fit: cover;
+			cursor: pointer;
+	 		align-self: center;
+	 		margin-right: 12px;
+		}
 
+		.result_item_title{
+			color: rgb(64, 89, 173);
+			font-size: 14pt;
+			font-weight: 400;
+			width: 100%;
+		}
+
+		.result_item_text{
+			color: black;
+			width: 100%;
+		}
