--- a/Practica1/css/styles.css
+++ b/Practica1/css/styles.css
@@ -2,6 +2,7 @@
 	font-family: 'Roboto', serif;
 	margin: 0px;
 	padding: 0px;
+	transition: all 400ms cubic-bezier(0.165, 0.840, 0.440, 1.000);
 }
 
 body, html{
@@ -37,14 +38,58 @@ body, html{
 
 	/* Login and register button */
 	.header_button{
-		font-size: 24px;
+		font-size: 18px;
 		font-weight: 500;
 		letter-spacing: 0px;
 		color: rgb(151, 216, 196);
 		padding: 20px;
+		padding-top: 0px;
 		float: right;
 		cursor: pointer;
 	}
+
+	.header_button:hover{
+		font-weight: 800;
+	}
+
+	/* Div containing all user information and options when it's logged */
+	.user_div{
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		align-items: flex-end;
+	}
+
+		/* Div containing user's avatar and name one it's logged */
+		.header_user_info{
+			display: flex;
+			flex-direction: row-reverse;
+			justify-content: flex-end;
+			align-items: center;
+		}
+
+			.header_user_name{
+				font-size: 22px;
+				color: rgb(244, 185, 66);
+				padding-right: 20px;
+				cursor: pointer;
+			}
+
+			.header_user_name:hover{
+				font-weight: 800;
+			}
+
+			.header_user_icon{
+				width: 64px;
+				height: 64px;
+				float: right;
+				cursor: pointer;
+				opacity: 0.9;
+			}
+
+			.header_user_icon:hover{
+				opacity: 1.0;
+			}
 
 /* Body */
 .body {
@@ -64,20 +109,32 @@ body, html{
 	}
 
 	.sidebar li {
-		padding: 8px;
-		color: rgb(64, 89, 173);
-		border-bottom-style: solid;
-		border-bottom-width: 2px;
-		border-bottom-color: #F2F2F2;
+		padding: 12px;
+		color: #1C1C1C;
 		cursor: pointer;
+		background-color: white;
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
 	}
+
+	.sidebar li:hover{
+		background-color: #F2F2F2;
+	}
+		/* Sidebar icons */
+		.sidebar li img{
+			opacity: 0.7;
+			max-height: 24px;
+			padding-left: 8px;
+			padding-right: 16px;
+		}
 
 	/* Content itself */
 	.content{
 		width: 85%;
 		min-height: 100%;
 		padding: 12px;
-		background: #F2F2F2;
+		background: #F9F9F9;
 		margin-bottom: 68px;
 	}
 
@@ -113,10 +170,17 @@ footer{
 	}
 
 	.social_icon{
-		max-width: 48px;
-		max-height: 48px;
+		max-width: 36px;
+		max-height: 36px;
 		padding-left: 8px;
+		padding-top: 6px;
+		padding-bottom: 6px;
 		float: left;
+		opacity: 0.8;
+	}
+
+	.social_icon:hover{
+		opacity: 1.0;
 	}
 
 
