[WIP] Work on search results by category and terms

--- a/Practica2/templates/index.html
+++ b/Practica2/templates/index.html
@@ -10,7 +10,7 @@
     <body>
 
       <header class="header fixed">
-        <a href="./home.html" target="content_iframe">
+        <a href={{ url_for('home') }} target="content_iframe">
           <h1 class="title">CDdede</h1>
         </a>
         <div>
