--- a/Practica2/templates/home.html
+++ b/Practica2/templates/home.html
@@ -9,17 +9,20 @@
     </head>
     <body>
       <div id="search_div">
-        <div id="search_field">
-          <input type="text" placeholder="Search" id="search_input">
-          <form action="./search.html" target="content_iframe">
-            <input type="image" src={{ url_for('static', filename='images/search.png') }} id="search_button" alt="The icon could not be shown.">
-          </form>
-        </div>
+        <!-- TODO: Almacenar en servidor y en variable la categoria seleccionada para que se recuerde -->
+        <form action="{{ url_for('search') }}" target="content_iframe" id="search_field">
+          <input type="text" placeholder="Search" id="search_input" name="term" value={{term or ''}}>
+          <input type="image" src={{ url_for('static', filename='images/search.png') }} id="search_button" alt="The icon could not be shown.">
+          <!-- Input used to store the showed categoty-->
+          <input type="hidden" name="prev_category" value={{'0' or category['id']}}>
+        </form>
         <div class="dropdown" id="category_field">
-          <button class="dropbtn">Categories</button>
+          <button class="dropbtn">{{'Categories' or category['name']}}</button>
           <div class="dropdown-content">
             {% for category in categories_data %}
-              <a href="#">{{category['name']}}</a>
+              <a href={{ url_for('search', category=category['id']) }}>
+                {{category['name']}}
+              </a>
             {% endfor %}
           </div>
         </div>
