--- a/Practica2/templates/search.html
+++ b/Practica2/templates/search.html
@@ -8,8 +8,6 @@
       <title>CDdede</title>
     </head>
     <body>
-
-      <!-- TODO: Almacenar en servidor y en variable la categoria seleccionada para que se recuerde -->
       <form action="{{ url_for('search') }}" target="content_iframe" id="search_div">
         <div id="search_field">
           <input type="text" placeholder="Search" id="search_input" name="term" value={{term or ''}}>
@@ -18,15 +16,20 @@
           <input type="hidden" name="prev_category" value={{'0' or category['id']}}>
         </div>
         
-        <div class="dropdown" id="category_field">
-          <button class="dropbtn">{{category['name'] or 'Categories'}}</button>
-          <div class="dropdown-content">
-            {% for category in categories_data %}
-              <a href={{ url_for('search', category=category['id']) }} >
-                {{category['name']}}
-              </a>
+        <div class="select-box">
+          <select name="category" onchange="this.form.submit()">
+            {% for cat in categories_data %}
+              {% if category and category['id'] == cat['id'] %}
+                <option selected="selected" value={{cat['id']}} class="dropdown-item" type="submit">
+                  {{cat['name']}}
+                </option>
+              {% else %}
+                 <option value={{cat['id']}} class="dropdown-item" type="submit">
+                  {{cat['name']}}
+                </option>
+              {% endif %}
             {% endfor %}
-          </div>
+          </select>
         </div>
       </form>
 
