--- a/Practica2/templates/detail.html
+++ b/Practica2/templates/detail.html
@@ -10,46 +10,41 @@
     <body>
       <div id="detail">
         <!-- Rectangle -->
-        <img id="filmImg" src="./Details/interstellar.png" alt="The image could not be shown.">
+        <img id="filmImg" src={{ url_for('data', filename='images/'+film['image']) }} alt="The image could not be shown.">
         <!-- image 2 -->
         <div class="info">
-          <h2>Interstellar</h2>
+          <h2>{{film['title']}}</h2>
 
           <div class="mainContainer">
-            <div class="verInfoContainer">
+            <div class="verExpandableContainer">
               <div class="infoContainer">
                 <h4>Director: </h4>
-                <h5>Christopher Nolan</h5>
+                <h5>{{film['director']}}</h5>
               </div>
 
               <div class="infoContainer">
                 <h4>Year: </h4>
-                <h5>2014</h5>
+                <h5>{{film['year']}}</h5>
               </div>
 
               <div class="infoContainer">
                 <h4>Duration: </h4>
-                <h5>169 min</h5>
+                <h5>{{film['duration']}}</h5>
               </div>
 
               <div class="infoContainer">
                 <h4>Genre: </h4>
-                <h5>Science Fiction</h5>
+                <h5>{{category['name']}}</h5>
               </div>
 
               <div class="infoContainer">
                 <h4>Language: </h4>
-                <h5>Spanish, English</h5>
+                <h5>{{film['']}}</h5>
               </div>
 
               <div class="verInfoContainer">
                 <h4>Starring: </h4>
-                <h5>Matthew McConaughey,
-                  Anne Hathaway,
-                  Jessica Chastain,
-                  Bill Irwin,
-                  Ellen Burstyn,
-                  Michael Caine</h5>
+                <h5>{{film['actors']}}</h5>
               </div>
 
             </div>
@@ -60,12 +55,12 @@
 
                 <div class="verInfoContainer">
                   <h4>Synopsis: </h4>
-                  <h5>A team of explorers travel through a wormhole in space in an attempt to ensure humanity's survival.</h5>
+                  <h5>{{film['synopsis']}}</h5>
                 </div>
 
                 <div class="infoContainer">
                   <h4>Price: </h4>
-                  <h5>24.99$</h5>
+                  <h5>{{film['price']|string + '$'}}</h5>
                 </div>
 
               </div>
