--- a/Practica2/templates/home.html
+++ b/Practica2/templates/home.html
@@ -37,7 +37,7 @@
       <ul class="film_list">
         {% for film in recommended_films %}
           <li class="film_item">
-            <a href="./detail.html" target="content_iframe">
+            <a href={{ url_for('detail', id=film['id']) }} target="content_iframe">
               <img class="film_item_img" src={{ url_for('data', filename='images/'+film['image']) }} alt="The image could not be shown.">
               <div class="film_item_text">{{film['title']}}<br>{{film['price']}}$</div>
             </a>
@@ -49,7 +49,7 @@
       <ul class="film_list">
         {% for film in best_seller_films %}
           <li class="film_item">
-            <a href="./detail.html" target="content_iframe">
+            <a href={{ url_for('detail', id=film['id']) }} target="content_iframe">
               <img class="film_item_img" src={{ url_for('data', filename='images/'+film['image']) }} alt="The image could not be shown.">
               <div class="film_item_text">{{film['title']}}<br>{{film['price']}}$</div>
             </a>
